--- a/Final.ipynb
+++ b/Final.ipynb
@@ -2,23 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
     "from pymongo import MongoClient\n",
-    "import os\n",
-    "from bson.objectid import ObjectId"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sql_example():\n",
+    "    # Check database and remove so I can start clean\n",
+    "    if os.path.exists('test_database.db'):\n",
+    "        os.remove('test_database.db')\n",
+    "\n",
     "    # Connect to SQLite database\n",
     "    conn = sqlite3.connect('test_database.db')\n",
     "    cursor = conn.cursor()\n",
@@ -82,7 +85,7 @@
     "    # Fetch updated user data\n",
     "    cursor.execute(\"SELECT * FROM users WHERE name = ?\", (\"Bob\",))\n",
     "    updated_bob = cursor.fetchall()\n",
-    "    print(\"\\nUpdated Bob:\", updated_bob)\n",
+    "    print(\"\\nUpdated Bob:\")\n",
     "    for user in updated_bob:\n",
     "        print(user)\n",
     "\n",
@@ -97,8 +100,7 @@
     "    for user in remaining_users:\n",
     "        print(user)\n",
     "\n",
-    "    conn.close()\n",
-    "    os.remove('test_database.db')\n"
+    "    conn.close()\n"
    ]
   },
   {
@@ -107,13 +109,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymongo import MongoClient\n",
-    "from bson.objectid import ObjectId  # To work with MongoDB ObjectId\n",
-    "\n",
     "def nosql_example():\n",
     "    # Connect to MongoDB\n",
     "    client = MongoClient('mongodb://localhost:27017/')  # Default connection URI for local MongoDB\n",
+    "\n",
+    "    # Start with a clean database for testing\n",
+    "    dbnames = client.list_database_names()\n",
+    "    if 'test_database' in dbnames:\n",
+    "        client.drop_database('test_database')\n",
+    "\n",
     "    db = client['test_database']  # Create a database named 'test_database'\n",
+    "\n",
+    "    # Delete the database after the function runs\n",
+    "    client.drop_database('test_database')\n",
     "    \n",
     "    # Create collections: users and addresses\n",
     "    users_collection = db['users']  # Create a collection named 'users'\n",
@@ -121,11 +129,11 @@
     "\n",
     "    # Insert data into users collection\n",
     "    users_data = [\n",
-    "        {\"name\": \"Alice\", \"age\": 30},\n",
+    "        {\"name\": \"Alice\", \"age\": 30, \"wage\":35.35},\n",
     "        {\"name\": \"Bob\", \"age\": 25},\n",
     "        {\"name\": \"Charlie\", \"age\": 35},\n",
-    "        {\"name\": \"David\", \"age\": 28},\n",
-    "        {\"name\": \"Eve\", \"age\": 40}\n",
+    "        {\"name\": \"David\"},\n",
+    "        {\"name\": \"Eve\", \"age\": 40, \"Favorite_color\":{\"Color\":\"Red\"}}\n",
     "    ]\n",
     "    users_collection.insert_many(users_data)\n",
     "    \n",
@@ -153,14 +161,14 @@
     "\n",
     "    # Fetch users and their addresses by joining users and addresses\n",
     "    user_addresses = []\n",
-    "    for user in users_collection.find():\n",
-    "        address = addresses_collection.find_one({\"user_id\": user[\"_id\"]})\n",
+    "    for user in users_collection.find({\"age\": {'$exists':True}}): # Check to see if they have an age in the collection\n",
+    "        address = addresses_collection.find_one({\"user_id\": user[\"_id\"]}) # Connect the address to the user by their ID\n",
     "        if address:\n",
     "            user_addresses.append({\"name\": user[\"name\"], \"age\": user[\"age\"], \"address\": address[\"address\"]})\n",
     "    \n",
     "    print(\"\\nUsers with addresses:\")\n",
     "    for user in user_addresses:\n",
-    "        print(user)\n",
+    "        print(user)    \n",
     "\n",
     "    # Update Bob's age to 26\n",
     "    users_collection.update_one({\"name\": \"Bob\"}, {\"$set\": {\"age\": 26}})\n",
@@ -180,17 +188,13 @@
     "    for user in remaining_users:\n",
     "        print(user)\n",
     "\n",
-    "    # Delete the database after the function runs\n",
-    "    client.drop_database('test_database')\n",
-    "\n",
     "    # Close the MongoDB connection\n",
-    "    client.close()\n",
-    "\n"
+    "    client.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +221,7 @@
       "('David', 28, '555 Dragonfruit Way')\n",
       "('Eve', 40, '757th Path')\n",
       "\n",
-      "Updated Bob: [(2, 'Bob', 26)]\n",
+      "Updated Bob:\n",
       "(2, 'Bob', 26)\n",
       "\n",
       "Remaining users after deletion:\n",
@@ -235,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -245,31 +249,30 @@
       "NoSQL Example:\n",
       "\n",
       "MongoDB Users by age:\n",
-      "{'_id': ObjectId('674e0e4b8eb52a9d40dd6b59'), 'name': 'David', 'age': 28}\n",
-      "{'_id': ObjectId('674e0e4b8eb52a9d40dd6b56'), 'name': 'Alice', 'age': 30}\n",
-      "{'_id': ObjectId('674e0e4b8eb52a9d40dd6b58'), 'name': 'Charlie', 'age': 35}\n",
-      "{'_id': ObjectId('674e0e4b8eb52a9d40dd6b5a'), 'name': 'Eve', 'age': 40}\n",
-      "{'_id': ObjectId('674e0e4b8eb52a9d40dd6b57'), 'name': 'Bob', 'age': '25'}\n",
+      "{'_id': ObjectId('67509a7656041f929d3da43b'), 'name': 'David'}\n",
+      "{'_id': ObjectId('67509a7656041f929d3da439'), 'name': 'Bob', 'age': 25}\n",
+      "{'_id': ObjectId('67509a7656041f929d3da438'), 'name': 'Alice', 'age': 30, 'wage': 35.35}\n",
+      "{'_id': ObjectId('67509a7656041f929d3da43a'), 'name': 'Charlie', 'age': 35}\n",
+      "{'_id': ObjectId('67509a7656041f929d3da43c'), 'name': 'Eve', 'age': 40, 'Favorite_color': {'Color': 'Red'}}\n",
       "\n",
       "Users older than 30:\n",
-      "{'_id': ObjectId('674e0e4b8eb52a9d40dd6b58'), 'name': 'Charlie', 'age': 35}\n",
-      "{'_id': ObjectId('674e0e4b8eb52a9d40dd6b5a'), 'name': 'Eve', 'age': 40}\n",
+      "{'_id': ObjectId('67509a7656041f929d3da43a'), 'name': 'Charlie', 'age': 35}\n",
+      "{'_id': ObjectId('67509a7656041f929d3da43c'), 'name': 'Eve', 'age': 40, 'Favorite_color': {'Color': 'Red'}}\n",
       "\n",
       "Users with addresses:\n",
       "{'name': 'Alice', 'age': 30, 'address': '123 Apple St'}\n",
-      "{'name': 'Bob', 'age': '25', 'address': '456 Banana Ave'}\n",
+      "{'name': 'Bob', 'age': 25, 'address': '456 Banana Ave'}\n",
       "{'name': 'Charlie', 'age': 35, 'address': '789 Cherry Blvd'}\n",
-      "{'name': 'David', 'age': 28, 'address': '555 Dragonfruit Way'}\n",
       "{'name': 'Eve', 'age': 40, 'address': '757th Path'}\n",
       "\n",
       "Updated Bob:\n",
-      "{'_id': ObjectId('674e0e4b8eb52a9d40dd6b57'), 'name': 'Bob', 'age': 26}\n",
+      "{'_id': ObjectId('67509a7656041f929d3da439'), 'name': 'Bob', 'age': 26}\n",
       "\n",
       "Remaining users after deletion:\n",
-      "{'_id': ObjectId('674e0e4b8eb52a9d40dd6b57'), 'name': 'Bob', 'age': 26}\n",
-      "{'_id': ObjectId('674e0e4b8eb52a9d40dd6b58'), 'name': 'Charlie', 'age': 35}\n",
-      "{'_id': ObjectId('674e0e4b8eb52a9d40dd6b59'), 'name': 'David', 'age': 28}\n",
-      "{'_id': ObjectId('674e0e4b8eb52a9d40dd6b5a'), 'name': 'Eve', 'age': 40}\n"
+      "{'_id': ObjectId('67509a7656041f929d3da439'), 'name': 'Bob', 'age': 26}\n",
+      "{'_id': ObjectId('67509a7656041f929d3da43a'), 'name': 'Charlie', 'age': 35}\n",
+      "{'_id': ObjectId('67509a7656041f929d3da43b'), 'name': 'David'}\n",
+      "{'_id': ObjectId('67509a7656041f929d3da43c'), 'name': 'Eve', 'age': 40, 'Favorite_color': {'Color': 'Red'}}\n"
      ]
     }
    ],
