--- a/Final.ipynb
+++ b/Final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,48 +23,51 @@
     "        os.remove('test_database.db')\n",
     "\n",
     "    # Connect to SQLite database\n",
-    "    conn = sqlite3.connect('test_database.db')\n",
-    "    cursor = conn.cursor()\n",
+    "    db = sqlite3.connect('test_database.db')\n",
+    "    cursor = db.cursor()\n",
     "\n",
     "    # Create tables: users and addresses\n",
-    "    cursor.execute('''CREATE TABLE IF NOT EXISTS users (\n",
+    "    cursor.execute('''CREATE TABLE users (\n",
     "                        id INTEGER PRIMARY KEY,\n",
     "                        name TEXT,\n",
     "                        age INTEGER)''')\n",
     "\n",
-    "    cursor.execute('''CREATE TABLE IF NOT EXISTS addresses (\n",
+    "    cursor.execute('''CREATE TABLE addresses (\n",
     "                        id INTEGER PRIMARY KEY,\n",
     "                        user_id INTEGER,\n",
     "                        address TEXT,\n",
     "                        FOREIGN KEY (user_id) REFERENCES users (id))''')\n",
     "\n",
     "    # Insert data into users table\n",
-    "    cursor.execute(\"INSERT INTO users (name, age) VALUES (?, ?)\", (\"Alice\", 30))\n",
-    "    cursor.execute(\"INSERT INTO users (name, age) VALUES (?, ?)\", (\"Bob\", 25))\n",
-    "    cursor.execute(\"INSERT INTO users (name, age) VALUES (?, ?)\", (\"Charlie\", 35))\n",
-    "    cursor.execute(\"INSERT INTO users (name, age) VALUES (?, ?)\", (\"David\", 28))\n",
-    "    cursor.execute(\"INSERT INTO users (name, age) VALUES (?, ?)\", (\"Eve\", 40))\n",
+    "    people = [\n",
+    "        (\"Alice\", 30),\n",
+    "        (\"Bob\", 25),\n",
+    "        (\"Charlie\", 35),\n",
+    "        (\"David\", 28),\n",
+    "        (\"Eve\", 40)\n",
+    "    ]\n",
+    "    cursor.executemany(\"INSERT INTO users (name, age) VALUES (?, ?)\", people)\n",
     "\n",
     "    # Insert data into addresses table\n",
-    "    cursor.execute(\"INSERT INTO addresses (user_id, address) VALUES (?, ?)\", (1, \"123 Apple St\"))\n",
-    "    cursor.execute(\"INSERT INTO addresses (user_id, address) VALUES (?, ?)\", (2, \"456 Banana Ave\"))\n",
-    "    cursor.execute(\"INSERT INTO addresses (user_id, address) VALUES (?, ?)\", (3, \"789 Cherry Blvd\"))\n",
-    "    cursor.execute(\"INSERT INTO addresses (user_id, address) VALUES (?, ?)\", (4, \"555 Dragonfruit Way\"))\n",
-    "    cursor.execute(\"INSERT INTO addresses (user_id, address) VALUES (?, ?)\", (5, \"757th Path\"))\n",
+    "    cursor.execute(\"\"\"INSERT INTO addresses (user_id, address) VALUES \n",
+    "                   (1, \"123 Apple St\"),\n",
+    "                   (2, \"456 Banana Ave\"),\n",
+    "                   (3, \"789 Cherry Blvd\"),\n",
+    "                   (4, \"555 Dragonfruit Way\"),\n",
+    "                   (5, \"757th Path\")\n",
+    "                   \"\"\")\n",
     "\n",
     "    # Commit changes\n",
-    "    conn.commit()\n",
+    "    db.commit()\n",
     "\n",
     "    # Fetch data from users table (with ordering and limit)\n",
-    "    cursor.execute(\"SELECT * FROM users ORDER BY age\")\n",
-    "    users = cursor.fetchall()\n",
+    "    users = cursor.execute(\"SELECT * FROM users ORDER BY age\").fetchall()\n",
     "    print(\"\\nSQL Users by age:\")\n",
     "    for user in users:\n",
     "        print(user)\n",
     "\n",
     "    # Fetch data from users with a condition (age > 30)\n",
-    "    cursor.execute(\"SELECT * FROM users WHERE age > ?\", (30,))\n",
-    "    users_above_30 = cursor.fetchall()\n",
+    "    users_above_30 = cursor.execute(\"SELECT * FROM users WHERE age > ?\", (30,)).fetchall()\n",
     "    print(\"\\nUsers older than 30:\")\n",
     "    for user in users_above_30:\n",
     "        print(user)\n",
@@ -80,32 +83,30 @@
     "\n",
     "    # Update data: Update Bob's age to 26\n",
     "    cursor.execute(\"UPDATE users SET age = ? WHERE name = ?\", (26, \"Bob\"))\n",
-    "    conn.commit()\n",
+    "    db.commit()\n",
     "\n",
     "    # Fetch updated user data\n",
-    "    cursor.execute(\"SELECT * FROM users WHERE name = ?\", (\"Bob\",))\n",
-    "    updated_bob = cursor.fetchall()\n",
+    "    updated_bob = cursor.execute(\"SELECT * FROM users WHERE name = ?\", (\"Bob\",)).fetchall()\n",
     "    print(\"\\nUpdated Bob:\")\n",
     "    for user in updated_bob:\n",
     "        print(user)\n",
     "\n",
     "    # Delete data: Remove Alice\n",
     "    cursor.execute(\"DELETE FROM users WHERE name = ?\", (\"Alice\",))\n",
-    "    conn.commit()\n",
+    "    db.commit()\n",
     "\n",
     "    # Fetch remaining users after deletion\n",
-    "    cursor.execute(\"SELECT * FROM users\")\n",
-    "    remaining_users = cursor.fetchall()\n",
+    "    remaining_users = cursor.execute(\"SELECT * FROM users\").fetchall()\n",
     "    print(\"\\nRemaining users after deletion:\")\n",
     "    for user in remaining_users:\n",
     "        print(user)\n",
     "\n",
-    "    conn.close()\n"
+    "    db.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +120,6 @@
     "        client.drop_database('test_database')\n",
     "\n",
     "    db = client['test_database']  # Create a database named 'test_database'\n",
-    "\n",
-    "    # Delete the database after the function runs\n",
-    "    client.drop_database('test_database')\n",
     "    \n",
     "    # Create collections: users and addresses\n",
     "    users_collection = db['users']  # Create a collection named 'users'\n",
@@ -148,7 +146,7 @@
     "    addresses_collection.insert_many(addresses_data)\n",
     "\n",
     "    # Fetch users ordered by age\n",
-    "    users = users_collection.find().sort(\"age\")\n",
+    "    users = users_collection.find({\"age\": {'$exists':True}}).sort(\"age\")\n",
     "    print(\"\\nMongoDB Users by age:\")\n",
     "    for user in users:\n",
     "        print(user)\n",
@@ -194,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -249,15 +247,14 @@
       "NoSQL Example:\n",
       "\n",
       "MongoDB Users by age:\n",
-      "{'_id': ObjectId('67509a7656041f929d3da43b'), 'name': 'David'}\n",
-      "{'_id': ObjectId('67509a7656041f929d3da439'), 'name': 'Bob', 'age': 25}\n",
-      "{'_id': ObjectId('67509a7656041f929d3da438'), 'name': 'Alice', 'age': 30, 'wage': 35.35}\n",
-      "{'_id': ObjectId('67509a7656041f929d3da43a'), 'name': 'Charlie', 'age': 35}\n",
-      "{'_id': ObjectId('67509a7656041f929d3da43c'), 'name': 'Eve', 'age': 40, 'Favorite_color': {'Color': 'Red'}}\n",
+      "{'_id': ObjectId('6753383017e2e85b20c0daa9'), 'name': 'Bob', 'age': 25}\n",
+      "{'_id': ObjectId('6753383017e2e85b20c0daa8'), 'name': 'Alice', 'age': 30, 'wage': 35.35}\n",
+      "{'_id': ObjectId('6753383017e2e85b20c0daaa'), 'name': 'Charlie', 'age': 35}\n",
+      "{'_id': ObjectId('6753383017e2e85b20c0daac'), 'name': 'Eve', 'age': 40, 'Favorite_color': {'Color': 'Red'}}\n",
       "\n",
       "Users older than 30:\n",
-      "{'_id': ObjectId('67509a7656041f929d3da43a'), 'name': 'Charlie', 'age': 35}\n",
-      "{'_id': ObjectId('67509a7656041f929d3da43c'), 'name': 'Eve', 'age': 40, 'Favorite_color': {'Color': 'Red'}}\n",
+      "{'_id': ObjectId('6753383017e2e85b20c0daaa'), 'name': 'Charlie', 'age': 35}\n",
+      "{'_id': ObjectId('6753383017e2e85b20c0daac'), 'name': 'Eve', 'age': 40, 'Favorite_color': {'Color': 'Red'}}\n",
       "\n",
       "Users with addresses:\n",
       "{'name': 'Alice', 'age': 30, 'address': '123 Apple St'}\n",
@@ -266,13 +263,13 @@
       "{'name': 'Eve', 'age': 40, 'address': '757th Path'}\n",
       "\n",
       "Updated Bob:\n",
-      "{'_id': ObjectId('67509a7656041f929d3da439'), 'name': 'Bob', 'age': 26}\n",
+      "{'_id': ObjectId('6753383017e2e85b20c0daa9'), 'name': 'Bob', 'age': 26}\n",
       "\n",
       "Remaining users after deletion:\n",
-      "{'_id': ObjectId('67509a7656041f929d3da439'), 'name': 'Bob', 'age': 26}\n",
-      "{'_id': ObjectId('67509a7656041f929d3da43a'), 'name': 'Charlie', 'age': 35}\n",
-      "{'_id': ObjectId('67509a7656041f929d3da43b'), 'name': 'David'}\n",
-      "{'_id': ObjectId('67509a7656041f929d3da43c'), 'name': 'Eve', 'age': 40, 'Favorite_color': {'Color': 'Red'}}\n"
+      "{'_id': ObjectId('6753383017e2e85b20c0daa9'), 'name': 'Bob', 'age': 26}\n",
+      "{'_id': ObjectId('6753383017e2e85b20c0daaa'), 'name': 'Charlie', 'age': 35}\n",
+      "{'_id': ObjectId('6753383017e2e85b20c0daab'), 'name': 'David'}\n",
+      "{'_id': ObjectId('6753383017e2e85b20c0daac'), 'name': 'Eve', 'age': 40, 'Favorite_color': {'Color': 'Red'}}\n"
      ]
     }
    ],
